<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000" />

    <RelativeLayout
        android:id="@+id/logoContainer"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/circular_background"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/shareplate_logo_image" />

        <LinearLayout
            android:id="@+id/logoTextLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sharePlateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/greenPlateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plate"
                android:textColor="@color/button_green"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/bottomSheetView"
        android:layout_width="413dp"
        android:layout_height="182dp"
        android:background="@drawable/bottom_sheet_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintStart_toStartOf="parent">
        <!-- Make the width 0dp to allow it to fill the parent,
             and constrain it horizontally to start and end of parent -->
    </View>


    <LinearLayout
        android:id="@+id/bottomContentContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="32dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_green"
        android:padding="16dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="30dp" />

        <LinearLayout
            android:id="@+id/loginTextContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

        <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/logInLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/text_blue"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>