<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main"
        tools:context=".SignupActivity">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_large"
            android:src="@drawable/shareplate_logo_image"
            android:adjustViewBounds="true"
            android:maxWidth="200dp"
            android:maxHeight="200dp"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/appNameGreenTextView"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

        <TextView
            android:id="@+id/appNameGreenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:text="@string/plate"
            android:textColor="@color/button_green"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appNameTextView"
            app:layout_constraintTop_toTopOf="@+id/appNameTextView" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/spacing_medium"
            android:background="@drawable/edittext_background"
            app:layout_constraintWidth_percent="0.85"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appNameTextView" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/edittext_background"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
            app:layout_constraintStart_toStartOf="@+id/usernameEditText"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/edittext_background"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:padding="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/button_green"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="@+id/confirmPasswordEditText"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordEditText"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

        <TextView
            android:id="@+id/orSignupWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="or Sign up with"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <LinearLayout
            android:id="@+id/socialLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/orSignupWith">

            <ImageButton
                android:id="@+id/googleButton"
                android:layout_width="@dimen/icon_size_large"
                android:layout_height="@dimen/icon_size_large"
                android:contentDescription="sign up with google"
                android:background="@drawable/google_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/cancelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/cancel"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/socialLoginLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>